--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://BasharAlwarad.github.io/shop",
   "name": "alwaradshop",
   "version": "1.0.0",
   "description": "MERN shopping cart app",
@@ -6,6 +7,8 @@
   "type": "module",
   "scripts": {
     "start": "node backend/server",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
@@ -28,6 +31,7 @@
   },
   "devDependencies": {
     "concurrently": "^6.4.0",
+    "gh-pages": "^4.0.0",
     "nodemon": "^2.0.15"
   }
 }
